force-app/main/default/objects/STR_Limit__c/STR_Limit__c.object-meta.xml
<CustomObject>
    <label>Limit</label>
    <nameField>
        <displayFormat>LIMIT-{0000}</displayFormat>
        <label>Limit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Limits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>