force-app/main/default/objects/STR_Limit__c/fields/STR_CUR_Amount__c.field-meta.xml
<CustomField>
    <fullName>STR_CUR_Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>