force-app/main/default/objects/STR_Limit__c/fields/STR_LKP_Company__c.field-meta.xml
<CustomField>
    <fullName>STR_LKP_Company__c</fullName>
    <label>Company</label>
    <referenceTo>STR_Company__c</referenceTo>
    <relationshipLabel>Limits</relationshipLabel>
    <relationshipName>Limits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>