force-app/main/default/objects/STR_Limit__c/fields/STR_PCK_ServiceId__c.field-meta.xml
<CustomField>
    <fullName>STR_PCK_ServiceId__c</fullName>
    <label>ServiceId</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>STR_Service</valueSetName>
    </valueSet>
</CustomField>