force-app/main/default/objects/STR_Limit__c/fields/STR_PCK_Status__c.field-meta.xml
<CustomField>
    <fullName>STR_PCK_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>active</fullName>
                <label>Active</label>
            </value>
            <value>
                <fullName>deactivated</fullName>
                <label>Deactivated</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>