force-app/main/default/objects/STR_Limit__c/recordTypes/STR_Limit.recordType-meta.xml
<RecordType>
    <fullName>STR_Limit</fullName>
    <active>true</active>
    <label>Limit</label>
</RecordType>